--- a/aba-spring-batch-read-file/pom.xml
+++ b/aba-spring-batch-read-file/pom.xml
@@ -7,9 +7,10 @@
   
    <properties>
 		<jdk.version>1.7</jdk.version>
-		<spring.version>3.2.2.RELEASE</spring.version>
+		<spring.version>4.1.6.RELEASE</spring.version>
 		<spring.batch.version>3.0.7.RELEASE</spring.batch.version>
 		<mysql.driver.version>5.1.36</mysql.driver.version>
+		<h2.database.version>1.4.192</h2.database.version>
 		 <!-- logger -->
 	     <slf4j.version>1.6.1</slf4j.version>
 	     <log4j.version>1.2.17</log4j.version>
@@ -43,6 +44,13 @@
 			<version>${spring.batch.version}</version>
 		</dependency>
 
+		 <!-- ########### DATABASE ########## -->
+        <!-- H 2-->
+ 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.database.version}</version>
+		</dependency>
 		<!-- MySQL database driver -->
 		<dependency>
 			<groupId>mysql</groupId>
