--- a/aba-spring-batch-read-file/src/main/resources/properties/jdbc.properties
+++ b/aba-spring-batch-read-file/src/main/resources/properties/jdbc.properties
@@ -1,14 +1,20 @@
 ######################## configuration de la datasource
 #### Type H2
-jdbc.driverClassName=org.h2.Driver
-jdbc.url=jdbc:h2:mem:sbreadunifilev400
-jdbc.username=sa
+#jdbc.driverClassName=org.h2.Driver
+#jdbc.url=jdbc:h2:mem:databasetest3
+#jdbc.username=sa
+#jdbc.password=
+
+#### Type MYSQL
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/springbatchdev
+jdbc.username=root
 jdbc.password=
 
 #### Pour les Tests
 # paramétres de connexion à la DB de test
 test.jdbc.driver=org.h2.Driver
-test.jdbc.url=jdbc:h2:file:C:/abenabbes/datadase/dev/jpaHibernate/test_player1
+test.jdbc.url=jdbc:h2:file:C:/abenabbes/datadase/dev/jpaHibernate/test_read_file1
 test.jdbc.username=sa
 test.jdbc.password=
 
