Correction bugs de lancement du job et du test JUnit

--- a/aba-spring-batch-read-file/src/main/resources/properties/jdbc.properties
+++ b/aba-spring-batch-read-file/src/main/resources/properties/jdbc.properties
@@ -13,7 +13,7 @@ jdbc.password=
 
 #### Pour les Tests
 # paramétres de connexion à la DB de test
-test.jdbc.driver=org.h2.Driver
+test.jdbc.driverClassName=org.h2.Driver
 test.jdbc.url=jdbc:h2:file:C:/abenabbes/datadase/dev/jpaHibernate/test_read_file1
 test.jdbc.username=sa
 test.jdbc.password=
