--- a/aba-spring-batch-read-file/src/main/resources/properties/batch.properties
+++ b/aba-spring-batch-read-file/src/main/resources/properties/batch.properties
@@ -1,2 +1,4 @@
 ######################## configuration des proprietes du batch
-commit.interval=1
+commit.interval=100
+resource.file=classpath:csv/model1.csv
+separateur.file=|
