--- a/aba-spring-batch-read-file/src/main/resources/properties/batch.properties
+++ b/aba-spring-batch-read-file/src/main/resources/properties/batch.properties
@@ -1,4 +1,9 @@
 ######################## configuration des proprietes du batch
+# nombre d'elements traites par le reader et le processor et qui vont etre writer
 commit.interval=100
+#
+start.limit=1
+# emplacement du fichier a lire
 resource.file=classpath:csv/model1.csv
+# separateur ou delimiteur des champs dans le fichier
 separateur.file=|
