Ajout des corrections

--- a/aba-spring-batch-read-file/src/main/resources/properties/batch.properties
+++ b/aba-spring-batch-read-file/src/main/resources/properties/batch.properties
@@ -7,3 +7,7 @@ start.limit=1
 resource.file=classpath:csv/model1.csv
 # separateur ou delimiteur des champs dans le fichier
 separateur.file=|
+# requet sql
+SQL_INSERT_QUERY=insert into model1(NOM,UNEDATE,VAL,IDJOBINSTANCE,DATEMODIF) values (:nom, :uneDate, :val, :idJobInstance, :dateModif)
+# Noms des colonnes à mapper
+NAME_COLUMN_MAPPING=nom,uneDate,val
